# ha_linja

./: .gitignore  README.md  configuration.yaml  hacs.json  setup.cfg
.github/workflows/: validate.yaml
custom_components/linja_priser/: __init__.py  config_flow.py  coordinator.py  manifest.json  sensor.py
custom_components/linja_priser/.translations/: en.json
custom_components/strom_priser/: config_flow.py  const.py  manifest.json  sensor.py
