[metadata]
name = linja_priser
version = 1.0.0
description = A Home Assistant integration for Linja power prices.
author = Your Name
author_email = your_email@example.com
url = https://github.com/yourgithubusername/linja_priser
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
    homeassistant

[options.extras_require]
dev =
    black
    flake8
